--- a/.eslintrc
+++ b/.eslintrc
@@ -1,29 +1,19 @@
 {
-    "extends" : ["eslint:recommended", "plugin:import/errors", "plugin:react/recommended", "plugin:jsx-a11y/recommended", "prettier", "prettier/react"],
+    "extends" : ["airbnb-base", "plugin:import/errors", "prettier"],
     "rules": {
-        "react/prop-types" : 0,
-        "no-console": 1,
-        "react-hooks/rules-of-hooks": 2,
-        "react-hooks/exhaustive-deps": 1
+        "no-console": 1
     },
-    "plugins" :["react", "import", "jsx-a11y", "react-hooks"],
+    "plugins" :["import"],
     "parser":"@babel/eslint-parser",
     "parserOptions": {
         "ecmaVersion" : 2020,
         "sourceType" : "module",
-        "ecmaFeatures" : {
-            "jsx": true
-        }
     },
     "env" : {
         "es6" : true,
-        "browser": true,
         "node": true
     },
     "settings": {
-        "react" : {
-            "version" : "detect"
-        }
     },
-    "ignorePatterns": ["/node_modules/**", "/build/**"]
+    "ignorePatterns": ["/node_modules/**", "/bin/**"]
 }
