--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,8 @@
 {
-    "presets": ["@babel/preset-env"],
-    "plugins": ["@babel/plugin-syntax-class-properties"],
-    "ignore": ["./node_modules"]
+  "presets": [["@babel/preset-env", {
+    "targets": {
+      "node": "14"
+    }
+  }]]
   }
   
